manifests/media-apps/immich/ml-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
spec:
  strategy:
    type: Recreate
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: intel.feature.node.kubernetes.io/gpu
                operator: In
                values:
                - "true"
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - nuc5
                - nuc6
      containers:
      - name: immich-machine-learning
        resources:
          requests:
            cpu: 3m
            memory: 300Mi
            gpu.intel.com/i915: '1'
          limits:
            memory: 2Gi
            gpu.intel.com/i915: '1'
