manifests/media-apps/immich/server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
spec:
  strategy:
    type: Recreate
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
      - name: immich-server
        resources:
          requests:
            cpu: 3m
            memory: 400Mi
          limits:
            memory: 1Gi
