manifests/media-apps/immich/strategy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ANY
spec:
  strategy:
    type: Recreate
