manifests/media-apps/immich/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: media-apps
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "immich.ucdialplans.com"
  rules:
  - backendRefs:
    - name: immich-server
      namespace: media-apps
      kind: Service
      port: 2283
